--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,18 @@
+@import "./fonts/inter.css";
+
+:root {
+  --border-radius-px: 50px;
+  --border-color-rgb: rgba(170, 170, 170, 0.4);
+  --border-width-px: 0.1px;
+}
+
 body {
+  background-color:black;
+  color: white;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-header {
-  
-}
 
-nav {
-
-}
