--- a/src/modules/AchievementBox.css
+++ b/src/modules/AchievementBox.css
@@ -1,13 +1,5 @@
-.achievement-box {
-    display: flex;
-    flex-direction: column;
-    font-weight: 300;
-  font-size: 1.5rem;
-  border-style: solid;
-  border-radius: var(--border-radius-px);
-  border-color: rgba(228, 228, 228, 0.6);
-  border-width: var(--border-width-px);
-  text-align: left;
-  padding: 45px;
+.achievements-box {
+  display: flex;
+  flex-direction: column;
   gap: 30px;
 }
