--- a/src/modules/InfoBlock.css
+++ b/src/modules/InfoBlock.css
@@ -19,7 +19,7 @@
 .grid-child nav{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .grid-child nav li{
@@ -36,6 +36,6 @@
   border-color: rgba(228, 228, 228, 0.6);
   border-width: var(--border-width-px);
   text-align: left;
-  padding: 40px 40px;
+  padding: 35px 40px;
   gap: 30px;
 }
