--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --border-color-rgb: rgba(170, 170, 170, 0.4);
   --border-width-px: 0.1px;
   --text-size-description: 1.2rem;
+  --text-size-title: 1.5rem;
 }
 
 body {
