--- a/src/modules/Navbar.css
+++ b/src/modules/Navbar.css
@@ -1,8 +1,7 @@
 .nav-header-div {
-    margin: 2.5vh;
     padding: 2.2vh;
     font-weight: 400;
-    font-size: 1.4rem;
+    font-size: var(--text-size-description);
     border-style: solid;
     border-width: 0.1px;
     border-color: var(--border-color-rgb);
