--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  width: 70vw;
+  width: 65vw;
   display: flex;
   flex-direction: column;
   margin: 2.5vh auto;
@@ -18,6 +18,7 @@ main{
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  gap: 6vh;
 }
 
 .darkveil-canvas {
@@ -40,7 +41,7 @@ main{
   align-items: center;
   justify-content: center;
   gap: 20px;
-  height: 30vh;
+  height: 25vh;
 }
 
 .App-header .text p{
@@ -76,7 +77,9 @@ main{
   grid-auto-flow: column;
 }
 
-
+#technologies{
+  grid-row: span 2;
+}
 
 hr {
   color: rgba(228, 228, 228, 0.6);
@@ -87,5 +90,9 @@ footer{
   display: flex;
   flex-direction: column;
   text-align: left;
-  gap:20px;
+  gap:15px;
+}
+
+footer .nickName{
+  color: var(--text-color-description);
 }
