--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --border-width-px: 0.1px;
   --text-size-description: 1.1rem;
   --text-size-title: 1.5rem;
+  scroll-behavior: smooth;
 }
 
 body {
