--- a/src/modules/Card.css
+++ b/src/modules/Card.css
@@ -2,6 +2,7 @@
   background-color: rgba(48, 36, 105, 0.5);
   padding: 10px 15px;
   border-radius: var(--border-radius-px);
+  color: var(--text-color-description);
 }
 .card:hover{
   background-color: rgba(35, 22, 102, 0.5);
