--- a/src/modules/InfoBlock.css
+++ b/src/modules/InfoBlock.css
@@ -1,6 +1,7 @@
 .grid-child .title{
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 20px;
   font-weight: 300;
   font-size: 1.3rem;
