--- a/src/modules/Project.css
+++ b/src/modules/Project.css
@@ -1,14 +1,25 @@
 .project {
-    border-style: solid;
-    border-radius: var(--border-radius-px);
-    border-color: rgba(228, 228, 228, 0.6);
-    border-width: var(--border-width-px);
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    height: 40vh;
-    overflow: hidden;
+  border-style: solid;
+  border-radius: var(--border-radius-px);
+  border-color: rgba(228, 228, 228, 0.6);
+  border-width: var(--border-width-px);
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  justify-content: space-between;
+  overflow: hidden;
+  position: relative;
+  color: var(--text-color-description);
+  background: transparent;
 }
+
+.project .top{
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  margin: 0;
+}
+
 .project .title{
   font-size: var(--text-size-description);
   color: white;
@@ -16,32 +27,30 @@
 }
 
 .project .img-div{
-    width: 100%;
-    height: 45%;
-    overflow: hidden;
+  width: 100%;
+  height: 45%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .project img{
-    object-fit: cover;
-    height: 150%;
+  height: 200%;
 }
 
 .project .text{
-    padding: 35px 40px;
-    display: flex;
-    flex-direction: column;
-    gap: 2.5vh;
+  padding: 35px 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5vh;
+}
+
+.project .technologies{
+  padding: 0 40px 40px;
 }
 
 .project .description{
-    color: var(--text-color-description);
-}
-
-.project{
-  position: relative;
   color: var(--text-color-description);
-  overflow: hidden;
-  background: transparent;
 }
 
 .project::before{
@@ -69,4 +78,24 @@
   border-radius: var(--border-radius-px);
   background: rgba(0, 0, 0, 0.75);
   z-index: -1;
+}
+
+
+
+@media (min-width: 1200px) {
+  .project{
+    height: 45vh;
+  }
+  .project .top{
+    height: 45vh;
+  }
+}
+
+@media (max-width: 1200px) {
+  .project{
+    height: 60vh;
+  }
+  .project .top{
+    height: 45vh;
+  }
 }
